[AI Fix] (a11y ADA compliance): update archive year link color to #2373db for contrast consistency

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -142,13 +142,13 @@
 }
 
 .post-link.archive-years {
-    color: #2a7ae2;
+    color: #2373db;
     //text-decoration: aqua;
     font-size: 100%;
 }
 
 .post-link.archive-years:visited {
-    color: #2a7ae2;
+    color: #2373db;
 }
 
 .home_post_nav {
